--- a/chingoal/discussion/templates/discussion/room.html
+++ b/chingoal/discussion/templates/discussion/room.html
@@ -105,11 +105,14 @@
 	</div>
 			<textarea id="msg" name="text" style="border: 1px solid #000000;resize: none;margin-top: 20px;margin-left:185px;width: 550px;height: 80px;"></textarea>
 			<button type="submit" class="btn btn-primary btn-sm" onclick="sendmsg({{roomObj.id}}, '{{user.username}}')">Send</button>
-            <button id="btn-expression" class="btn btn-primary btn-sm">Add smile</button>
-            <div id="expression-box" style="display:none"><span>
-            <img src="{% static 'img/smile.jpg' %}" style="width: 42px;height: 42px;" class="img-responsive img-circle title_img" alt="no=image" onclick="sendimage('smile')" >
-            <img src="{% static 'img/sad.jpg' %}" style="width: 42px;height: 42px;" class="img-responsive img-circle title_img" alt="no=image" onclick="sendimage('sad')" >
-            </span>
+            <button id="btn-expression" class="btn btn-primary btn-sm">Add expression</button>
+            <div id="expression-box" style="display:none;margin-left:200px;">
+            <img src="{% static 'img/smile.jpg' %}" style="width: 32px;height: 32px;" alt="no=image" onclick="sendimage('smile')" >
+            <img src="{% static 'img/sad.jpg' %}" style="width: 32px;height: 32px;" alt="no=image" onclick="sendimage('sad')" >
+            <img src="{% static 'img/strange.jpg' %}" style="width: 32px;height: 32px;" alt="no=image" onclick="sendimage('strange')" >
+            <img src="{% static 'img/happy.jpg' %}" style="width: 32px;height: 32px;" alt="no=image" onclick="sendimage('happy')" >
+            <img src="{% static 'img/dead.jpg' %}" style="width: 32px;height: 32px;" alt="no=image" onclick="sendimage('dead')" >
+            <img src="{% static 'img/angry.jpg' %}" style="width: 32px;height: 32px;" alt="no=image" onclick="sendimage('angry')" >
             </div>
 
 	</section>
