--- a/chingoal/testpage/templates/testpage/learn_audio.html
+++ b/chingoal/testpage/templates/testpage/learn_audio.html
@@ -105,9 +105,9 @@
                             <div class="col-lg-1"></div>                     
                             <div class="col-lg-1">
                                 <br><br>
-                                <p><i class="fa fa-play fa-lg" id="play_button"></i></p>
+                                <p><i class="fa fa-play fa-lg" id="playButton"></i></p>
                                 <br>
-                                <p><i class="fa fa-play-circle fa-lg" id="restart_button"></i></p>
+                                <p><i class="fa fa-play-circle fa-lg" id="restartButton"></i></p>
                             </div>
                             <!-- <div class="col-lg-2">
                                 
@@ -117,7 +117,7 @@
                                 
                             </div> -->
                             <div class="col-lg-10">
-                                <canvas style="width:400px;height:150px;background-color:#fcf8e3"></canvas>
+                                <canvas id="wave_learn" style="width:400px;height:150px;background-color:#fcf8e3"></canvas>
                             </div>
                         </div>                        
                         <h5>Please record anytime when you are ready.</h5>
@@ -149,7 +149,8 @@
                             <div class="col-lg-1"></div>
                             <div class="col-lg-1">
                                 <br><br><br>
-                                <p><a href="" id="saveButton" style="text-decoration:none;color: inherit;"><i class="fa fa-floppy-o fa-2x"></i></a></p>
+                                <!-- <p><a href="" id="playUserAudioButton" style="text-decoration:none;color: inherit;"><i class="fa fa-file-audio-o fa-2x"></i></a></p> -->
+                                <p><i id="playUserAudioButton" class="fa fa-file-audio-o fa-2x"></i></p>
                             </div>
                             <div class="col-lg-8">
                                 <canvas id="wave_user" style="width:400px;height:150px;background-color:#fcf8e3"></canvas>
@@ -221,6 +222,10 @@
                 </div>
             </div>
         </div>
+
+
+        <!-- Hidden field -->
+
     </footer>
  {% endblock %}
  
@@ -260,8 +265,13 @@
     
     <script src="{% static 'js/visualizeWave.js' %}" type="text/javascript"></script>
 
-    <script src="{% static 'js/custom_recorder.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/custom_audio.js' %}" type="text/javascript"></script>
+<!--     // <script src="{% static 'js/custom_recorder.js' %}" type="text/javascript"></script>
+    // <script src="{% static 'js/custom_audio.js' %}" type="text/javascript"></script> -->
 
+    <script src="{% static 'js/custom_audio_revised.js' %}" type="text/javascript"></script>
+
+    <script src="{% static 'js/learn_audio.js' %}" type="text/javascript"></script>
+
+    <script src="{% static 'js/wavesurfer.js' %}" type="text/javascript"></script>
 
 {% endblock %}
