modify the going to classroom button

--- a/chingoal/discussion/static/css/custom_discussion_board.css
+++ b/chingoal/discussion/static/css/custom_discussion_board.css
@@ -24,3 +24,13 @@
 .delete-btn {
     margin-top: 15px;
 }
+.post_btn{
+    position:relative;
+    left:-180px;
+    top:20px;
+}
+.bt1 {
+    position:relative;
+    left:100px;
+    top:-25px;
+}
