--- a/chingoal/discussion/templates/discussion/discussion_board.html
+++ b/chingoal/discussion/templates/discussion/discussion_board.html
@@ -127,8 +127,8 @@
             <div class="col-lg-5"></div>
             <div class="col-lg-2">
             <div class="row">
-                <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">New Post</button>
-                <a class="btn btn-primary btn-lg" href="{% url 'chat' %}">Going to chatroom</a>
+                <button class="btn btn-primary btn-lg post_btn" data-toggle="modal" data-target="#myModal">New Post</button>
+                <a class="btn btn-primary btn-lg bt1" href="{% url 'chat' %}">Going to chatroom</a>
             </div>
             </div>
             <div class="col-lg-5"></div>
