add chat by video

--- a/chingoal/discussion/templates/discussion/index.html
+++ b/chingoal/discussion/templates/discussion/index.html
@@ -88,6 +88,7 @@
     </nav>
 
 	<section id="portfolio" class="bg-light-gray">
+         <a href="http://localhost:3000">video</a>
 		<h2 style="margin-left:70px;">{{ username }},welcome to chat rooms!</h2>
     {% if flag == 1 %}
         {% if error %}
