--- a/chingoal/discussion/templates/discussion/video_home.html
+++ b/chingoal/discussion/templates/discussion/video_home.html
@@ -1,21 +1,18 @@
 {% extends "base.html" %}
 
     {% block title-content %}
-     <title>ChatRoom</title>
+    <title>Chatroom</title>
     {% endblock %}
     {% block head %}
     {% load static %}
-    <link href="{% static "css/custom_discussion_board.css"%}" rel="stylesheet">
-   {% endblock %}
-   {% block head-origin %}
+    <link href="{% static "css/custom_discussion_board.css"%}" rel="stylesheet">    {% endblock %}
+    {% block head-origin %}
     {% endblock %}
-
-  {% block main-content %}
-  {% csrf_token %}
-	<input type="hidden" id="room_id" value="{{roomObj.id}}">
-    <input type="hidden" id="user_id" value="{{user.id}}">
-    <input type="hidden" id="user_name" value="{{user.username}}">
-    <nav class="navbar navbar-default navbar-fixed-top">
+    
+    
+{% block main-content %}
+ {% csrf_token %}
+   <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -34,23 +31,23 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="{% url 'dashboard' %}" onclick="onbeforeunload_handler()">Lessons</a>
+                        <a class="page-scroll" href="{% url 'dashboard' %}">Lessons</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="{% url 'discussion_home' %}" onclick="onbeforeunload_handler()" >Discussion</a>
+                        <a class="page-scroll" href="{% url 'discussion_home' %}">Discussion</a>
                     </li>
                     {% if flag == 1 %}
                      <li>
-                           <a href="{% url 'testcreate' %}" onclick="onbeforeunload_handler()">Create Test</a>
+                           <a href="{% url 'testcreate' %}">Create Test</a>                   
                     </li>   
                     {% else %}
                     
                     <li>
-                    <a class="page-scroll" href="{% url 'store' %}" onclick="onbeforeunload_handler()">Store</a>
+                    <a class="page-scroll" href="{% url 'store' %}">Store</a> 
                         </li>
                                       
                     {% endif %}
-					<li class="dropdown">
+                    <li class="dropdown">
                         {% if hasnewmsg == 'no' %}
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="msgbar">
                             {% else %}
@@ -73,12 +70,12 @@
                              <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
-                        <li><a href="{% url 'viewProfile' user.username %}" onclick="onbeforeunload_handler()"><i class="fa fa-user fa-fw"></i> User Profile</a>
+                        <li><a href="{% url 'viewProfile' username %}"><i class="fa fa-user fa-fw"></i> User Profile</a>
                         </li>
-                        <li><a href="{% url 'editProfile' %}" onclick="onbeforeunload_handler()"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                        <li><a href="{% url 'editProfile' %}"><i class="fa fa-gear fa-fw"></i> Settings</a>
                         </li>
                         <li class="divider"></li>
-                        <li><a href="{% url 'logout' %}" onclick="onbeforeunload_handler()"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                         </li>
                     </ul>
                     <!~~ /.dropdown-user ~~>
@@ -89,35 +86,71 @@
         </div>
         <!~~ /.container-fluid ~~>
     </nav>
-    <section id="portfolio" class="bg-light-gray">   
-	<div class="page-header">
 
-	<h3 style="margin-left:200px;">Current Room: {{ roomObj.roomname }}</h3>
-	</div>
-	<div class="row">
-		<div style="width: 600px;height: 500px;border: 1px solid #000000;float: left;margin-left: 200px;overflow: auto;" id="chatting">
-
-		</div>
-		<div class="text-center" style="width: 200px;height: 500px;border: 1px solid #000000;float: left;margin-left: 20px;">
-			<div style="border-bottom: 1px solid #000000;"><h4>OnlineList:</h4></div>
-			<ul id="onlinelist" class="list-group" style="overflow: auto;height: 458px;">
-			</ul>
-		</div>
-	</div>
-			<textarea id="msg" name="text" style="border: 1px solid #000000;resize: none;margin-top: 20px;margin-left:185px;width: 550px;height: 80px;"></textarea>
-			<button type="submit" class="btn btn-primary btn-sm" onclick="sendmsg({{roomObj.id}}, '{{user.username}}')">Send</button>
-            <button id="btn-expression" class="btn btn-primary btn-sm">Add expression</button>
-            <div id="expression-box" style="display:none;margin-left:200px;">
-            <img src="{% static 'img/smile.jpg' %}" style="width: 32px;height: 32px;" alt="no=image" onclick="sendimage('smile')" >
-            <img src="{% static 'img/sad.jpg' %}" style="width: 32px;height: 32px;" alt="no=image" onclick="sendimage('sad')" >
-            <img src="{% static 'img/strange.jpg' %}" style="width: 32px;height: 32px;" alt="no=image" onclick="sendimage('strange')" >
-            <img src="{% static 'img/happy.jpg' %}" style="width: 32px;height: 32px;" alt="no=image" onclick="sendimage('happy')" >
-            <img src="{% static 'img/dead.jpg' %}" style="width: 32px;height: 32px;" alt="no=image" onclick="sendimage('dead')" >
-            <img src="{% static 'img/angry.jpg' %}" style="width: 32px;height: 32px;" alt="no=image" onclick="sendimage('angry')" >
-            </div>
-
+	<section id="portfolio" class="bg-light-gray">
+         <a href="http://localhost:3000/#11">video</a>
+		<h2 style="margin-left:70px;">{{ username }},welcome to chat rooms!</h2>
+        {% if error %}
+        <p>{{error}}</p>
+        {% endif %}
+        <form role="form" action="/discussion/createRoom" method="post">
+        <div style="margin-left:70px;">
+            <input type="text" name="roomname" spellcheck="false">
+            <input type="submit" value="Create a new room">
+        </div>
+        {% csrf_token %}
+        </form>
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>Room number</th>
+					<th>Room name</th>
+					<th>Created by</th>
+				</tr>
+			</thead>
+			<tbody id="roomlist">
+				{% for item in RoomObj %}
+					<tr>
+						<th>{{ forloop.counter }}</th>
+						<th><a href="{% url 'room' item.id %}">{{ item }}</a></th>
+						<th>{{item.owner}}</th>
+                        {% if item.owner == username %}
+						<th><a href="{% url 'deleteRoom' item.id %}">X</a></th>
+                        {% endif %}
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
 	</section>
-{% endblock %} 
+	
+<footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <span class="copyright">Copyright &copy; Your Website 2014</span>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline social-buttons">
+                        <li><a href="http://www.twitter.com"><i class="fa fa-twitter"></i></a>
+                    </li>
+                    <li><a href="http://www.facebook.com"><i class="fa fa-facebook"></i></a>
+                    </li>
+                    <li><a href="http://www.linkedin.com"><i class="fa fa-linkedin"></i></a>
+                    </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline quicklinks">
+                        <li><a href="#">Privacy Policy</a>
+                        </li>
+                        <li><a href="#">Terms of Use</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    {% endblock %}
 {% block model-define %}
 <div id="reply_box_list">
     {% for msg in newmsgs %}
@@ -131,7 +164,7 @@
                 <div class="modal-body">
                     <p>{{msg.timestamp}}</p>
                     <p>{{msg.text}}</p>
-                    <form role="form" action="{% url 'reply' msg.sender cur_username msg.id %}" method="post">
+                    <form role="form" action="{% url 'reply' msg.sender username msg.id %}" method="post">
                         <input type="text" name="textarea1" style="width : 300px;" required>
                             <button type="submit" class="btn btn-primary btn-sm">Reply</button>
                             <a href={% url 'dismiss' msg.id %} class="btn btn-primary btn-sm">Dismiss</a>
@@ -142,11 +175,32 @@
         </div>
     </div>
     {% endfor %}
-</div>           {% endblock %}
-
-{% block script-content %}
-{% load static  %}
-<script src="{% static 'js/jquery-2.1.4.min.js' %}" type="text/javascript"></script>
-<script src="{% static 'js/chat_room.js' %}"></script>
-
+</div>
 {% endblock %}
+
+ {% block script-content %}
+<script src="/../static/js/jquery-1.11.2.js" type="text/javascript"></script>
+
+<script>
+function updaterooms() {
+		$.get("/discussion/update", function(data){
+		    $("#roomlist").empty();
+		    var rooms = data['rooms'];
+            for (num in rooms) {
+                var room = rooms[num];
+                var roomc = parseInt(num)+1
+                var html = '<tr><th>'+roomc+'</th><th><a href="/discussion/goRoom/'+room.id+'">'+room.roomname+'</a></th>\
+                <th>'+room.owner+'</th>';
+              if (room.owner == data['cur_username']) {
+                html += '<th><a href="/discussion/delete/'+room.id+'">X</a></th></tr>';
+              }
+                $('#roomlist').append(html);   
+            }          
+        });
+}
+$(document).ready(function () {
+    setInterval(updaterooms, 2000);
+});		
+
+</script>
+{%endblock%}
