--- a/chingoal/discussion/templates/discussion/video_home.html
+++ b/chingoal/discussion/templates/discussion/video_home.html
@@ -111,7 +111,7 @@
 				{% for item in RoomObj %}
 					<tr>
 						<th>{{ forloop.counter }}</th>
-						<th><a href="http://localhost:3000/#{{RoomObj.id}}">{{ item }}</a></th>
+						<th><a href="http://localhost:3000/#{{item.id}}">{{ item }}</a></th>
 						<th>{{item.owner}}</th>
                         {% if item.owner == username %}
                         {% endif %}
