modify the video_home page

--- a/chingoal/discussion/templates/discussion/video_room.html
+++ b/chingoal/discussion/templates/discussion/video_room.html
@@ -72,8 +72,7 @@
   </style>
 </head>
 <body>
-  <div id="chat">
-    <div class="msgs" id="msgs"></div>
+  <div >
     <input type="file" id="fileIpt" class="fileIpt">
     <button id="sendFileBtn" class="sendFileBtn">Send File</button>
     <button onclick="window.location.href='http://54.164.42.224/discussion/video/';">Leave</button>
