--- a/chingoal/discussion/templates/discussion/video_room.html
+++ b/chingoal/discussion/templates/discussion/video_room.html
@@ -203,6 +203,6 @@
     msgs.appendChild(p);
   });
   //连接WebSocket服务器
-  rtc.connect("ws:" + window.location.href.substring(window.location.protocol.length).split('#')[0], window.location.hash.slice(1));
+  rtc.connect("wss:" + window.location.href.substring(window.location.protocol.length).split('#')[0], window.location.hash.slice(1));
 </script>
 </html>
