--- a/chingoal/testpage/templates/testpage/post_question.html
+++ b/chingoal/testpage/templates/testpage/post_question.html
@@ -81,6 +81,9 @@
                             Creating Test
                         </div>
                         <div class="panel-body">
+                        <form id="testidform">
+                        <input id="testid" type="hidden" name="testid" value="{{testid}}">
+                        </form>
                         <form id="levelform" role="form" action="{% url 'editSchedule' %}" method="post">
                         <div class="form-group">
                         {% for field in chooselevel.visible_fields %}
