change url to register

--- a/chingoal/account/templates/account/login.html
+++ b/chingoal/account/templates/account/login.html
@@ -83,7 +83,7 @@
                                         <a href="{% url 'reset' %}">Forget Password?</a>
                                     </label>
                                     <label >
-                                        <a href="{% url 'register' %}">SignUp</a>
+                                        <a href="{% url 'register' parameter %}">SignUp</a>
                                     </label>                         
                                 </div>
                                 {% csrf_token %}
