--- a/chingoal/home/templates/home.html
+++ b/chingoal/home/templates/home.html
@@ -63,7 +63,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To Chingoal!</div>
                 <div class="intro-heading">Learn Chinese with US!</div>
-                <p><a href="{% url 'register' %}" class="page-scroll btn btn-xl">Register Now</a></p>
+                <p><a href="{% url 'register' parameter %}" class="page-scroll btn btn-xl">Register Now</a></p>
                 <p><a href="{% url 'login' %}" class="page-scroll">Already have an account? Login</a></p> 
                 <!-- TODO!!!!! LINK -->
             </div>
