--- a/chingoal/discussion/templates/discussion/video_room.html
+++ b/chingoal/discussion/templates/discussion/video_room.html
@@ -5,10 +5,13 @@
     {% endblock %}
     {% block head %}
     {% load static %}
-    <link href="{% static "css/custom_discussion_board.css"%}" rel="stylesheet">    {% endblock %}
+    <link href="{% static "css/custom_discussion_board.css"%}" rel="stylesheet">  
+ <link href="{% static "css/video_room.css"%}" rel="stylesheet">
+  {% endblock %}
     {% block head-origin %}
     {% endblock %}
-    
+{% block ishout %}
+{% endblock %}    
     
 {% block main-content %}
  {% csrf_token %}
@@ -47,26 +50,8 @@
                         </li>
                                       
                     {% endif %}
-                    <li class="dropdown">
-                        {% if hasnewmsg == 'no' %}
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="msgbar">
-                            {% else %}
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="msgbar" style="color:red">
-                                {% endif %}
-                             <i class="fa fa-envelope fa-fw"></i><i id="newmsg">{{msgcount}}</i><i class="fa fa-caret-down"></i>
-                    </a>
-                            <ul id="msglist" class="dropdown-menu dropdown-user">
-                                {% for msg in newmsgs %}
-                                <li>{% if msg.isReply %}<a data-toggle="modal" data-target="#reply_box{{ msg.id }}">
-                                    {% else %}<a data-toggle="modal" data-target="#reply_box{{ msg.id }}" style="color:red;">
-                                        {% endif %}
-                                        <i class="fa fa-comment fa-fw"></i>{{msg.sender}}</a>
-                                    </li>
-                                {% endfor %}
-                            </ul>
-          </li>
-                    <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+			<li class="dropdown">
+ 			<a class="dropdown-toggle" data-toggle="dropdown" href="#">
                              <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
@@ -91,7 +76,6 @@
    <div >
     <input type="file" id="fileIpt" class="fileIpt">
     <button id="sendFileBtn" class="sendFileBtn">Send File</button>
-    <button onclick="window.location.href='http://54.164.42.224/discussion/video/';">Leave</button>
   </div>
   <div id="videos">
     <video id="me" autoplay></video>
@@ -127,34 +111,7 @@
             </div>
         </div>
     </footer>
-    {% endblock %}
-{% block model-define %}
-<div id="reply_box_list">
-    {% for msg in newmsgs %}
-    <div class="modal fade" id="reply_box{{ msg.id }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4>From: {{msg.sender}}</h4>
-                </div>
-                <div class="modal-body">
-                    <p>{{msg.timestamp}}</p>
-                    <p>{{msg.text}}</p>
-                    <form role="form" action="{% url 'reply' msg.sender username msg.id %}" method="post">
-                        <input type="text" name="textarea1" style="width : 300px;" required>
-                            <button type="submit" class="btn btn-primary btn-sm">Reply</button>
-                            <a href={% url 'dismiss' msg.id %} class="btn btn-primary btn-sm">Dismiss</a>
-                            {% csrf_token %}
-                            </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    {% endfor %}
-</div>
-{% endblock %}
-
+{%endblock%}
  {% block script-content %}
 <!-- <script src="/../static/js/jquery-1.11.2.js" type="text/javascript"></script> -->
 {% load static %}
