fixed default setting

--- a/chingoal/testpage/templates/testpage/base_mc.html
+++ b/chingoal/testpage/templates/testpage/base_mc.html
@@ -103,7 +103,7 @@ Question <p class="question-num" style="display:inline">{{id}}</p> (Multiple Cho
 </div>
 </div>
 <div class="panel-footer">
-{% if save == "false" %}
+{% if save != "true" %}
 <button type="button" class="btn btn-info save-btn">Save</button>
 {% else %}
 <button type="button" class="btn btn-warning edit-btn">Edit</button>
