--- a/chingoal/testpage/templates/testpage/base_tr.html
+++ b/chingoal/testpage/templates/testpage/base_tr.html
@@ -28,7 +28,7 @@ Question <p class="question-num" style="display:inline">{{id}}</p> (Word Transla
 </div>            
 </div>
 <div class="panel-footer">
-{% if save == "false" %}
+{% if save != "true" %}
 <button type="button" class="btn btn-info save-btn">Save</button>
 {% else %}
 <button type="button" class="btn btn-warning edit-btn">Edit</button>
