--- a/chingoal/testpage/templates/testpage/learn.html
+++ b/chingoal/testpage/templates/testpage/learn.html
@@ -1,8 +1,17 @@
 {% extends "base.html" %}
 
+    {% block metahead %}
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="cache-control" content="no-store" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
+    {% endblock %}
+
 
     {% block title-content %} 
-    <title>Chingoal_Dashboard</title>
+    <title>Chingoal_Learn</title>
     {% endblock %}
 
     {% block head %}
@@ -11,6 +20,7 @@
     {% endblock %}
     {% block head-origin %}
     {% endblock %}
+
 
     {% block main-content %}
 
@@ -43,8 +53,7 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="{% url 'store' %}">Store</a>                       
-                    </li>                    
-                    
+                    </li>                                        
                     <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                              <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
@@ -78,40 +87,39 @@
                         <div class="row">
                             <div class="col-lg-2">
                                 <br>
-                                <a href="{% url 'audio' %}">
+                                <!-- <a href="{% url 'audio' %}">
                                 <button class="btn btn-info">TIP</button>
-                                </a>
+                                </a> -->
                             </div>
                             <div class="col-lg-8">
                                 <p>
                                     <strong>Learning Progress</strong>
-                                    <span class="pull-right text-muted">20% Complete</span>
+                                    <span class="pull-right text-muted" id="progress-text"></span>
                                 </p>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="40"
-                                            aria-valuemin="0" aria-valuemax="100" style="width:20%">
-                                        <span class="sr-only">70% Complete</span>
+                                    <div id="progress-bar" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40"
+                                            aria-valuemin="0" aria-valuemax="100" style="width:0%">
+                                        <span class="sr-only" id="progress-span">% Complete</span>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-2">
                                 <br>
-                                <button class="btn btn-info">QUIT</button>
+                                <!-- <button class="btn btn-info" id="quitBtn">QUIT</button> -->
                             </div>
-                        </div>
-                        
+                        </div>                        
                     </div>
                     <div class="panel-body">
-                        <h4>Select Translation for <em>Girl</em></h4>
+                        <h4>Select Translation for <em>{{learning_material.text}}</em></h4>
                         <div class="row">
                             <div class="col-lg-4">
-                                <img src="{% static "img/girl.jpg"%}" class="img-responsive img-circle img-learn">
+                                <img src="{% url 'getlearnphoto' learning_material.level learning_material.lesson learning_material.chapter 'a' %}" class="img-responsive img-circle img-learn">
                             </div>
                             <div class="col-lg-4">
-                                <img src="{% static "img/dog.jpg"%}" class="img-responsive img-circle img-learn">
+                                <img src="{% url 'getlearnphoto' learning_material.level learning_material.lesson learning_material.chapter 'b' %}" class="img-responsive img-circle img-learn">
                             </div>
                             <div class="col-lg-4">
-                                <img src="{% static "img/boy.jpg"%}" class="img-responsive img-circle img-learn">
+                                <img src="{% url 'getlearnphoto' learning_material.level learning_material.lesson learning_material.chapter 'c' %}" class="img-responsive img-circle img-learn">
                             </div>
                         </div>
                         <div class="row">
@@ -120,19 +128,19 @@
                                 <div class="col-lg-3">
         
                                     <label class="radio-inline">
-                                        <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline1" value="option1" checked><em>A.女孩</em>
+                                        <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline1" value="a" ><em>A.{{learning_material.a}}</em>
                                     </label>
                                 </div>
                                 <div class="col-lg-1"></div>
                                 <div class="col-lg-3">
                                     <label class="radio-inline">
-                                                        <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline1" value="option2" ><em>B.男孩</em>
+                                        <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline1" value="b" ><em>B.{{learning_material.b}}</em>
                                     </label>
                                 </div>
                                 <div class="col-lg-1"></div>
                                 <div class="col-lg-3">
                                     <label class="radio-inline">
-                                        <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline1" value="option3" ><em>C.狗</em>
+                                        <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline1" value="c" ><em>C.{{learning_material.c}}</em>
                                     </label>
                                 </div>              
                             </div>
@@ -141,26 +149,19 @@
                     <div class="panel-footer">
                         <div class="row">
                             <div class="col-lg-4">
-                            <button type="button" class="btn btn-primary btn-lg btn-block">Skip</button>
+                            <button type="button" class="btn btn-primary btn-lg btn-block" id="skipBtn">Skip</button>
                             </div>
                             <div class="col-lg-4">
                             </div>
                             <div class="col-lg-4">
-                            <button class="btn btn-info btn-lg btn-block" data-toggle="modal" data-target="#myModal">
+                            <button class="btn btn-info btn-lg btn-block" data-toggle="modal" data-target="#myModal" id="checkBtn">
                             Check
                             </button>
                                                     
                             </div>
                         </div>    
                     </div>
-
-
-
-
-
                 </div>
-
-
             </div>
             <div class="col-lg-4">
                 <div class="row">
@@ -178,6 +179,15 @@
                 </div>
             </div>
         </div>
+
+        <div hidden id="hidden_username">{{cur_user.user.username}}</div>
+        <div hidden id="hidden_user_level">{{cur_user.current_level}}</div>
+        <div hidden id="hidden_user_lesson">{{cur_user.current_lesson}}</div>
+        <div hidden id="hidden_curr_level">{{learning_material.level}}</div>
+        <div hidden id="hidden_curr_lesson">{{learning_material.lesson}}</div>
+        <div hidden id="hidden_answer">{{learning_material.answer}}</div>
+        <div hidden id="hidden_curr_chapter">{{learning_material.chapter}}</div>
+        <div hidden id="hidden_text">{{learning_material.text}}</div>
         
     </section>
 
@@ -226,13 +236,14 @@
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             <h4 class="modal-title" id="myModalLabel">Explanation</h4>
         </div>
-        <div class="modal-body">
-        A
+        <div class="modal-body" id="answer-modal">
+        {{learning_material.answer}}
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
-            <!-- This is for presentation -->
-            <button type="button" class="btn btn-primary" onclick="location.href='{% url 'learnaudio' %}'">Next</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal">Ok</button>            
+            <button type="button" class="btn btn-primary" id="nextBtn">Next</button>
+            
+            
             <!-- <button type="button" class="btn btn-primary" onclick="location.href='{% url 'getlearn' cur_user.current_level cur_user.current_lesson|add:1 %}'">Next</button> -->
         </div>
     </div>
@@ -241,4 +252,12 @@
 <!-- /.modal-dialog -->
 </div>
 <!-- /.modal -->       
+{% endblock %}
+
+{% block script-content %}
+    {% load static %}    
+    <script src="{% static 'js/learn.js' %}" type="text/javascript"></script>
+    <!-- <script src="{% static 'js/custom_audio_revised.js' %}" type="text/javascript"></script>
+    // <script src="{% static 'js/learn_audio.js' %}" type="text/javascript"></script>
+    // <script src="{% static 'js/visualizeWave.js' %}" type="text/javascript"></script> -->
 {% endblock %}
