--- a/chingoal/home/templates/dashboard.html
+++ b/chingoal/home/templates/dashboard.html
@@ -99,7 +99,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Lessons</h2>
-                    <h3 class="section-subheading text-muted">We have XX levels, where you can improve your chinese skills step by step.</h3>
+                    <h3 class="section-subheading text-muted">We have six levels, where you can improve your chinese skills step by step.</h3>
                 </div>
             </div>
             <div class="row">
