--- a/chingoal/testpage/templates/testpage/test-feedback.html
+++ b/chingoal/testpage/templates/testpage/test-feedback.html
@@ -79,10 +79,16 @@
         
             <div id="question-container" class="panel panel-primary">                  
                 <div  id="phead" class="panel-heading">
-                    Feed Back 
+                    <div class="row">
+                        <div class="col-lg-4" style="font-size:200%">Feed Back</div>
+                        <div class="col-lg-6"></div>
+                        <div class="col-lg-1">Your Score:</div>
+                        <div class="col-lg-1" style="color:red;font-size:200%">{{score}}</div>
+                    </div>
                 </div>
 
                 <div id="pbody" class="panel-body">
+
                 <ul id="questions" >
                 
                 {% for item in questionanswer %}
@@ -122,7 +128,11 @@
 
                 <div id="pfoot" class="panel-footer">
                     <div class="row">
-                        <button type="button" class="btn btn-warning next-btn">Next</button>
+                        <div class="col-lg-1"></div>
+                        <div class="col-lg-2">
+                            <a href="{% url 'dashboard' %}" type="button" class="btn btn-warning btn-lg">OK</a>
+                        </div>
+                        <div class="col-lg-9"></div> 
                     </div>
                 </div>
             </div>
