--- a/chingoal/store/templates/store/store.html
+++ b/chingoal/store/templates/store/store.html
@@ -94,6 +94,7 @@
             <div class="row">
                 <div class="col-sm-6 ">
                     <h3 class="header">Use Your Virtual Money To Buy A Title</h3><br/>
+                    <span>{{error}}</span>
                 </div>
              </div>   
             <div class="row bg-light-gray">
