fix learn level

--- a/chingoal/testpage/templates/testpage/test.html
+++ b/chingoal/testpage/templates/testpage/test.html
@@ -70,6 +70,7 @@
 
 <!-- Portfolio Grid Section -->
 <section id="portfolio" class="bg-light-gray">      
+
     <div id="page-wrapper">
     <div class="row">
     <br>
@@ -87,6 +88,7 @@
                 <input id="maxentry" type="hidden" name="max_entry" value="-1">
                 <input id="qnum" type="hidden" name="qnum" value="-1">
                 <input id="qid" type="hidden" name="qid" value="-1">
+                <input id="testlevel" type="hidden" name="level" value="{{level}}">            
                 </div>
 
                 <div id="pfoot" class="panel-footer">
