--- a/chingoal/testpage/templates/testpage/learn_audio.html
+++ b/chingoal/testpage/templates/testpage/learn_audio.html
@@ -173,7 +173,7 @@
                     </div>
                     <div class="col-lg-8">
                         <img src="{{cur_user.photo.url}}" class="img-responsive img-circle">
-                        <button type="button" class="btn btn-primary btn-lg btn-block" onclick="location.href='{% url 'gettest' cur_user.current_level %}'">Testout</button>
+                        <button type="button" class="btn btn-primary btn-lg btn-block" onclick="location.href='{% url 'gettest' testoutlevel %}'">Testout</button>
                     </div>
                     <div class="col-lg-2">
                     </div>
