--- a/chingoal/testpage/templates/testpage/test-tr.html
+++ b/chingoal/testpage/templates/testpage/test-tr.html
@@ -20,4 +20,5 @@
         {{form.max_entry}}
         {{form.qnum}}
         {{form.qid}}
+        <input id="testlevel" type="hidden" name="level" value="{{level}}">            
 </div>            
