new video for homepage

--- a/chingoal/home/templates/home.html
+++ b/chingoal/home/templates/home.html
@@ -90,8 +90,8 @@
                         <div class="embed-responsive embed-responsive-16by9">
                         <video id="lesson_video" autoplay loop> 
                             <!-- IF NEEDED ADD AUTOPLAY TO AUTOPLAY -->
-                            <source src="static/video/SampleVideo.mp4" type = "video/mp4">
-                            <source src="static/video/SampleVideo.webm" type = "video/webm">
+                            <source src="static/video/level1.mp4" type = "video/mp4">
+                            <source src="static/video/level1.webm" type = "video/webm">
                         </video>
                         </div>
                         <!-- <img src="img/portfolio/roundicons.png" class="img-responsive" alt=""> -->
@@ -111,8 +111,8 @@
                         <div class="embed-responsive embed-responsive-16by9">
                         <video id="lesson_video" autoplay loop> 
                             <!-- IF NEEDED ADD AUTOPLAY TO AUTOPLAY CONTROLS LOOP TO AUTOREPLAY-->
-                            <source src="static/video/SampleVideo.mp4" type = "video/mp4">
-                            <source src="static/video/SampleVideo.webm" type = "video/webm">
+                            <source src="static/video/level2.mp4" type = "video/mp4">
+                            <source src="static/video/level2.webm" type = "video/webm">
                         </video>
                         </div>
                         <!-- <img src="img/portfolio/startup-framework.png" class="img-responsive" alt=""> -->
@@ -132,8 +132,8 @@
                         <div class="embed-responsive embed-responsive-16by9">
                         <video id="lesson_video" autoplay loop> 
                             <!-- IF NEEDED ADD AUTOPLAY TO AUTOPLAY -->
-                            <source src="static/video/SampleVideo.mp4" type = "video/mp4">
-                            <source src="static/video/SampleVideo.webm" type = "video/webm">
+                            <source src="static/video/level3.mp4" type = "video/mp4">
+                            <source src="static/video/level3.webm" type = "video/webm">
                         </video>
                         </div>
                         <!-- <img src="img/portfolio/treehouse.png" class="img-responsive" alt=""> -->
@@ -153,8 +153,8 @@
                         <div class="embed-responsive embed-responsive-16by9">
                         <video id="lesson_video" autoplay > 
                             <!-- IF NEEDED ADD AUTOPLAY TO AUTOPLAY -->
-                            <source src="static/video/SampleVideo.mp4" type = "video/mp4">
-                            <source src="static/video/SampleVideo.webm" type = "video/webm">
+                            <source src="static/video/level4.mp4" type = "video/mp4">
+                            <source src="static/video/level4.webm" type = "video/webm">
                         </video>
                         </div>
                         <!-- <img src="img/portfolio/golden.png" class="img-responsive" alt=""> -->
@@ -174,8 +174,8 @@
                         <div class="embed-responsive embed-responsive-16by9">
                         <video id="lesson_video" autoplay > 
                             <!-- IF NEEDED ADD AUTOPLAY TO AUTOPLAY -->
-                            <source src="static/video/SampleVideo.mp4" type = "video/mp4">
-                            <source src="static/video/SampleVideo.webm" type = "video/webm">
+                            <source src="static/video/level5.mp4" type = "video/mp4">
+                            <source src="static/video/level5.webm" type = "video/webm">
                         </video>
                         </div>
                         <!-- <img src="img/portfolio/escape.png" class="img-responsive" alt=""> -->
@@ -195,8 +195,8 @@
                         <div class="embed-responsive embed-responsive-16by9">
                         <video id="lesson_video" autoplay > 
                             <!-- IF NEEDED ADD AUTOPLAY TO AUTOPLAY -->
-                            <source src="static/video/SampleVideo.mp4" type = "video/mp4">
-                            <source src="static/video/SampleVideo.webm" type = "video/webm">
+                            <source src="static/video/level6.mp4" type = "video/mp4">
+                            <source src="static/video/level6.webm" type = "video/webm">
                         </video>
                         </div>
                         <!-- <img src="img/portfolio/dreams.png" class="img-responsive" alt=""> -->
