--- a/chingoal/home/templates/home.html
+++ b/chingoal/home/templates/home.html
@@ -88,8 +88,8 @@
                             </div>
                         </div>
                         <div class="embed-responsive embed-responsive-16by9">
-                        <video id="lesson_video" autoplay loop> 
-                            <!-- IF NEEDED ADD AUTOPLAY TO AUTOPLAY -->
+                        <video id="lesson_video" loop> 
+                            <!-- IF NEEDED ADD TO -->
                             <source src="static/video/level1.mp4" type = "video/mp4">
                             <source src="static/video/level1.webm" type = "video/webm">
                         </video>
@@ -109,8 +109,8 @@
                             </div>
                         </div>
                         <div class="embed-responsive embed-responsive-16by9">
-                        <video id="lesson_video" autoplay loop> 
-                            <!-- IF NEEDED ADD AUTOPLAY TO AUTOPLAY CONTROLS LOOP TO AUTOREPLAY-->
+                        <video id="lesson_video" loop> 
+                            <!-- IF NEEDED ADD TO CONTROLS LOOP TO AUTOREPLAY-->
                             <source src="static/video/level2.mp4" type = "video/mp4">
                             <source src="static/video/level2.webm" type = "video/webm">
                         </video>
@@ -130,8 +130,8 @@
                             </div>
                         </div>
                         <div class="embed-responsive embed-responsive-16by9">
-                        <video id="lesson_video" autoplay loop> 
-                            <!-- IF NEEDED ADD AUTOPLAY TO AUTOPLAY -->
+                        <video id="lesson_video" loop> 
+                            <!-- IF NEEDED ADD TO -->
                             <source src="static/video/level3.mp4" type = "video/mp4">
                             <source src="static/video/level3.webm" type = "video/webm">
                         </video>
@@ -151,8 +151,8 @@
                             </div>
                         </div>
                         <div class="embed-responsive embed-responsive-16by9">
-                        <video id="lesson_video" autoplay > 
-                            <!-- IF NEEDED ADD AUTOPLAY TO AUTOPLAY -->
+                        <video id="lesson_video" > 
+                            <!-- IF NEEDED ADD TO -->
                             <source src="static/video/level4.mp4" type = "video/mp4">
                             <source src="static/video/level4.webm" type = "video/webm">
                         </video>
@@ -172,8 +172,8 @@
                             </div>
                         </div>
                         <div class="embed-responsive embed-responsive-16by9">
-                        <video id="lesson_video" autoplay > 
-                            <!-- IF NEEDED ADD AUTOPLAY TO AUTOPLAY -->
+                        <video id="lesson_video" > 
+                            <!-- IF NEEDED ADD TO -->
                             <source src="static/video/level5.mp4" type = "video/mp4">
                             <source src="static/video/level5.webm" type = "video/webm">
                         </video>
@@ -193,8 +193,8 @@
                             </div>
                         </div>
                         <div class="embed-responsive embed-responsive-16by9">
-                        <video id="lesson_video" autoplay > 
-                            <!-- IF NEEDED ADD AUTOPLAY TO AUTOPLAY -->
+                        <video id="lesson_video" > 
+                            <!-- IF NEEDED ADD TO -->
                             <source src="static/video/level6.mp4" type = "video/mp4">
                             <source src="static/video/level6.webm" type = "video/webm">
                         </video>
